--- a/index.html
+++ b/index.html
@@ -3,67 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yoav Ben Moshe - Artist Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-        }
-        header, section {
-            margin-bottom: 20px;
-        }
-        .portfolio-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 20px;
-        }
-        .portfolio-item {
-            text-align: center;
-        }
-        .portfolio-item img {
-            max-width: 100%;
-            height: auto;
-        }
-    </style>
+    <title>Yoav Ben Moshe - Artist</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Yoav Ben Moshe</h1>
-        <p>Artist Portfolio</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="CV.html">CV</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="music.html">Music</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <div class="portfolio-grid">
-            <!-- Add your portfolio items here -->
-            <div class="portfolio-item">
-                <img src="path/to/your/image1.jpg" alt="Artwork Title 1">
-                <p>Artwork Title 1</p>
-            </div>
-            <!-- Repeat for more artwork -->
+    <main>
+        <div class="gallery-image">
+            <img src="P1028918.jpeg" alt="Ballad to a Lullaby, 2024">
         </div>
-    </section>
+     
 
-    <section id="cv">
-        <h2>CV</h2>
-        <a href="/Users/joavbenmoshe/Library/CloudStorage/GoogleDrive-yoavbenmo@gmail.com/My Drive/Art/Art Applications/TransArts 2024:2025/Stage I/CV 2024.pdf" target="_blank">Download CV (PDF)</a>
-    </section>
 
-    <section id="contact">
-        <h2>Contact Information</h2>
-        <p>Email: yoavbenmo@gmail.com</p>
-        <p>Instagram: <a href="https://www.instagram.com/man.dewho" target="_blank">@man.dewho</a></p>
-    </section>
+    <h2 style="text-align: center;">Subscribe to My Mailing List</h2>
 
-    <section id="newsletter">
-        <h2>Join My Newsletter</h2>
-        <form action="submit-form-url" method="POST">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <button type="submit">Subscribe</button>
-        </form>
-    </section>
+  <div class="subscribe-form">
+    <form action="https://formspree.io/f/xblroeea" method="POST">
+      <input type="email" name="email" placeholder="Enter your email address" required>
+      <button type="submit">Subscribe</button>
+    </form>
+  </div>
+    </main>
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/man.dewho/profilecard/?igsh=d3pnM3g5dTIxZGxz"> @man.dewho </a>
+            <a href="mailto:yoavbenmo@gmail.com"> yoavbenmo@gmail.com </a>
+        </div>
+    </footer>
 </body>
 </html>
