--- a/CV.html
+++ b/CV.html
@@ -21,31 +21,53 @@
     </header>
     <main>
         <h2>CV</h2>
-
         <div class="CV-grid">
             <div class="CV-item">
-                <h3>Exhibitions</h3>
+                <h3>Education</h3>
                 <div class="cv-row">
                     <span class="cv-year">2023</span>
-                    <span class="cv-type">Solo Exhibition</span>
+                    <span class="cv-name">Sculpture and Spatial Strategies Studio</span>
+                    <span class="cv-place">Academy of Fine Arts Vienna</span>
+                </div>
+                <div class="cv-row">
+                    <span class="cv-year">2020 - 2024</span>
+                    <span class="cv-name">BFA</span>
+                    <span class="cv-place">Bezalel Academy of Art and Design</span>
+                    <span class="cv-city">Jerusalem</span>
+                </div>
+                <div class="cv-row">
+                    <span class="cv-year">2019 - 2020</span>
+                    <span class="cv-name">Community Art Studies Program</span>
+                    <span class="cv-place">Tarbut School of Art</span>
+                    <span class="cv-city">Afula</span>
+                </div>
+                <div class="cv-row">
+                    <span class="cv-year">2019 - 2020</span>
+                    <span class="cv-name">Painting and Drawing</span>
+                    <span class="cv-place">Teacher: Leonid Balaklav</span>
+                </div>
+            </div>
+
+            <div class="CV-item">
+                <h3>Exhibitions</h3>
+                <h4>Solo Exhibitions</h4>
+                <div class="cv-row">
+                    <span class="cv-year">2023</span>
                     <span class="cv-name">Special Delivery</span>
                     <span class="cv-place">Kunst und- Kulturzentrum Semmelweis Klinik</span>
                     <span class="cv-city">Vienna</span>
                 </div>
-                
-                <p>Description of Album 1</p>
-                <h3>Work</h3>
-                <p>Description of Album 1</p>
-                
-            </div>
-            <!-- Add more music items as needed -->
-        </div>
-    </main>
-    <footer>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/man.dewho/profilecard/?igsh=d3pnM3g5dTIxZGxz"> @man.dewho </a>
-            <a href="mailto:yoavbenmo@gmail.com"> yoavbenmo@gmail.com </a>
-        </div>
-    </footer>
-</body>
-</html>
+                <div class="cv-row">
+                    <span class="cv-year">2022</span>
+                    <span class="cv-name">Schnitzel Schnitzel</span>
+                    <span class="cv-place">Bezalel Academy for Art and Design</span>
+                    <span class="cv-city">Jerusalem</span>
+                </div>
+
+                <h4>Group Exhibitions</h4>
+                <div class="cv-row">
+                    <span class="cv-year">2023</span>
+                    <span class="cv-name">Schulverkehrserziehungsgarten</span>
+                    <span class="cv-place">Stadtraum Mitte 15</span>
+                    <span class="cv-city">Vienna</span>
+                </div>
