Trying again claude's new code

--- a/CV.html
+++ b/CV.html
@@ -11,63 +11,60 @@
         <h1>Yoav Ben Moshe</h1>
         <nav>
             <ul>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="CV.html">CV</a>
-                <a href="projects.html">Projects</a>
-                <a href="music.html">Music</a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="CV.html">CV</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="music.html">Music</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>CV</h2>
-        <div class="CV-grid">
-            <div class="CV-item">
-                <h3>Education</h3>
-                <div class="cv-row">
-                    <span class="cv-year">2023</span>
-                    <span class="cv-name">Sculpture and Spatial Strategies Studio</span>
-                    <span class="cv-place">Academy of Fine Arts Vienna</span>
-                </div>
-                <div class="cv-row">
-                    <span class="cv-year">2020 - 2024</span>
-                    <span class="cv-name">BFA</span>
-                    <span class="cv-place">Bezalel Academy of Art and Design</span>
-                    <span class="cv-city">Jerusalem</span>
-                </div>
-                <div class="cv-row">
-                    <span class="cv-year">2019 - 2020</span>
-                    <span class="cv-name">Community Art Studies Program</span>
-                    <span class="cv-place">Tarbut School of Art</span>
-                    <span class="cv-city">Afula</span>
-                </div>
-                <div class="cv-row">
-                    <span class="cv-year">2019 - 2020</span>
-                    <span class="cv-name">Painting and Drawing</span>
-                    <span class="cv-place">Teacher: Leonid Balaklav</span>
-                </div>
-            </div>
+        
+        <section>
+            <h3>Education</h3>
+            <ul>
+                <li><strong>2023:</strong> Sculpture and Spatial Strategies Studio, Academy of Fine Arts Vienna</li>
+                <li><strong>2020 - 2024:</strong> BFA, Bezalel Academy of Art and Design, Jerusalem</li>
+                <li><strong>2019 - 2020:</strong> Community Art Studies Program, Tarbut School of Art, Afula</li>
+                <li><strong>2019 - 2020:</strong> Painting and Drawing, Teacher: Leonid Balaklav</li>
+            </ul>
+        </section>
 
-            <div class="CV-item">
-                <h3>Exhibitions</h3>
-                <h4>Solo Exhibitions</h4>
-                <div class="cv-row">
-                    <span class="cv-year">2023</span>
-                    <span class="cv-name">Special Delivery</span>
-                    <span class="cv-place">Kunst und- Kulturzentrum Semmelweis Klinik</span>
-                    <span class="cv-city">Vienna</span>
-                </div>
-                <div class="cv-row">
-                    <span class="cv-year">2022</span>
-                    <span class="cv-name">Schnitzel Schnitzel</span>
-                    <span class="cv-place">Bezalel Academy for Art and Design</span>
-                    <span class="cv-city">Jerusalem</span>
-                </div>
+        <section>
+            <h3>Exhibitions</h3>
+            <h4>Solo Exhibitions</h4>
+            <ul>
+                <li><strong>2023:</strong> "Special Delivery", Kunst und- Kulturzentrum Semmelweis Klinik, Vienna</li>
+                <li><strong>2022:</strong> "Schnitzel Schnitzel", Bezalel Academy for Art and Design, Jerusalem</li>
+            </ul>
 
-                <h4>Group Exhibitions</h4>
-                <div class="cv-row">
-                    <span class="cv-year">2023</span>
-                    <span class="cv-name">Schulverkehrserziehungsgarten</span>
-                    <span class="cv-place">Stadtraum Mitte 15</span>
-                    <span class="cv-city">Vienna</span>
-                </div>
+            <h4>Group Exhibitions</h4>
+            <ul>
+                <li><strong>2023:</strong> "Schulverkehrserziehungsgarten", Stadtraum Mitte 15, Vienna</li>
+                <li><strong>2023:</strong> "Export" Magazine Launch, Teder, Tel Aviv</li>
+                <li><strong>2022:</strong> "Trip to Franzenyl-Fransesci", Beit Alliance Studio FF0037, Jerusalem</li>
+                <li><strong>2022:</strong> "Merhav Mufkar (No Man's Land)", Haparsa Center for Performing Arts, Jerusalem</li>
+                <li><strong>2022:</strong> "Expo/Concert/DJ", Local Voice, Jerusalem</li>
+                <li><strong>2021:</strong> "Trigger Warning", Bezalel Academy for Art and Design, Jerusalem</li>
+                <li><strong>2020:</strong> "Kodesh VeBotz (Sanctity and Mud)", Tarbut School of Art, Afula</li>
+                <li><strong>2020:</strong> "Alimut MiBayit", Afula Municipal Art Gallery, Afula</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Awards</h3>
+            <ul>
+                <li><strong>2022, 2023:</strong> Award for Outstanding Students, Bezalel Academy of Art and Design, Jerusalem</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/man.dewho/profilecard/?igsh=d3pnM3g5dTIxZGxz">@man.dewho</a>
+            <a href="mailto:yoavbenmo@gmail.com">yoavbenmo@gmail.com</a>
+        </div>
+    </footer>
+</body>
+</html>
