code update from claude after changing css grid

--- a/CV.html
+++ b/CV.html
@@ -1,70 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yoav Ben Moshe - CV</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Yoav Ben Moshe</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="CV.html">CV</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="music.html">Music</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>CV</h2>
-        
-        <section>
+<main>
+    <h2>CV</h2>
+    
+    <div class="cv-container">
+        <section class="cv-section">
             <h3>Education</h3>
             <ul>
-                <li><strong>2023:</strong> Sculpture and Spatial Strategies Studio, Academy of Fine Arts Vienna</li>
-                <li><strong>2020 - 2024:</strong> BFA, Bezalel Academy of Art and Design, Jerusalem</li>
-                <li><strong>2019 - 2020:</strong> Community Art Studies Program, Tarbut School of Art, Afula</li>
-                <li><strong>2019 - 2020:</strong> Painting and Drawing, Teacher: Leonid Balaklav</li>
+                <li><span class="cv-year">2023:</span> Sculpture and Spatial Strategies Studio, Academy of Fine Arts Vienna</li>
+                <li><span class="cv-year">2020 - 2024:</span> BFA, Bezalel Academy of Art and Design, Jerusalem</li>
+                <li><span class="cv-year">2019 - 2020:</span> Community Art Studies Program, Tarbut School of Art, Afula</li>
+                <li><span class="cv-year">2019 - 2020:</span> Painting and Drawing, Teacher: Leonid Balaklav</li>
             </ul>
         </section>
 
-        <section>
+        <section class="cv-section">
             <h3>Exhibitions</h3>
             <h4>Solo Exhibitions</h4>
             <ul>
-                <li><strong>2023:</strong> "Special Delivery", Kunst und- Kulturzentrum Semmelweis Klinik, Vienna</li>
-                <li><strong>2022:</strong> "Schnitzel Schnitzel", Bezalel Academy for Art and Design, Jerusalem</li>
+                <li><span class="cv-year">2023:</span> "Special Delivery", Kunst und- Kulturzentrum Semmelweis Klinik, Vienna</li>
+                <li><span class="cv-year">2022:</span> "Schnitzel Schnitzel", Bezalel Academy for Art and Design, Jerusalem</li>
             </ul>
 
             <h4>Group Exhibitions</h4>
             <ul>
-                <li><strong>2023:</strong> "Schulverkehrserziehungsgarten", Stadtraum Mitte 15, Vienna</li>
-                <li><strong>2023:</strong> "Export" Magazine Launch, Teder, Tel Aviv</li>
-                <li><strong>2022:</strong> "Trip to Franzenyl-Fransesci", Beit Alliance Studio FF0037, Jerusalem</li>
-                <li><strong>2022:</strong> "Merhav Mufkar (No Man's Land)", Haparsa Center for Performing Arts, Jerusalem</li>
-                <li><strong>2022:</strong> "Expo/Concert/DJ", Local Voice, Jerusalem</li>
-                <li><strong>2021:</strong> "Trigger Warning", Bezalel Academy for Art and Design, Jerusalem</li>
-                <li><strong>2020:</strong> "Kodesh VeBotz (Sanctity and Mud)", Tarbut School of Art, Afula</li>
-                <li><strong>2020:</strong> "Alimut MiBayit", Afula Municipal Art Gallery, Afula</li>
+                <li><span class="cv-year">2023:</span> "Schulverkehrserziehungsgarten", Stadtraum Mitte 15, Vienna</li>
+                <li><span class="cv-year">2023:</span> "Export" Magazine Launch, Teder, Tel Aviv</li>
+                <!-- Add other group exhibitions here -->
             </ul>
         </section>
 
-        <section>
+        <section class="cv-section">
             <h3>Awards</h3>
             <ul>
-                <li><strong>2022, 2023:</strong> Award for Outstanding Students, Bezalel Academy of Art and Design, Jerusalem</li>
+                <li><span class="cv-year">2022, 2023:</span> Award for Outstanding Students, Bezalel Academy of Art and Design, Jerusalem</li>
             </ul>
         </section>
-    </main>
-    <footer>
-        <div class="social-icons">
-            <a href="https://www.instagram.com/man.dewho/profilecard/?igsh=d3pnM3g5dTIxZGxz">@man.dewho</a>
-            <a href="mailto:yoavbenmo@gmail.com">yoavbenmo@gmail.com</a>
-        </div>
-    </footer>
-</body>
-</html>
+    </div>
+</main>
