--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Yoav Ben Moshe</h1>
+        <h1><a href="index.html">Yoav Ben Moshe</a></h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <!-- Removed the Home button -->
                 <li><a href="about.html">About</a></li>
                 <li><a href="CV.html">CV</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -19,6 +19,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <div class="gallery-image">
             <img src="P1028918.jpeg" alt="Ballad to a Lullaby, 2024">
