claude's version this time only the main changes

--- a/CV.html
+++ b/CV.html
@@ -1,4 +1,25 @@
-<main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yoav Ben Moshe - Music</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Yoav Ben Moshe</h1>
+        <nav>
+            <ul>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="CV.html">CV</a>
+                <a href="projects.html">Projects</a>
+                <a href="music.html">Music</a>
+            </ul>
+        </nav>
+    </header>
+   <main>
     <h2>CV</h2>
     
     <div class="cv-container">
@@ -36,3 +57,11 @@
         </section>
     </div>
 </main>
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/man.dewho/profilecard/?igsh=d3pnM3g5dTIxZGxz"> @man.dewho </a>
+            <a href="mailto:yoavbenmo@gmail.com"> yoavbenmo@gmail.com </a>
+        </div>
+    </footer>
+</body>
+</html>
