--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Yoav Ben Moshe</a></h1>
+        <h1><a href="index.html" class="header-link">Yoav Ben Moshe</a></h1>
         <nav>
             <ul>
                 <!-- Removed the Home button -->
