--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Yoav Ben Moshe</h1>
+        <h1><a href="index.html" class="header-link">Yoav Ben Moshe</a></h1>
         <nav>
             <ul>
                 <a href="about.html">About</a>
